# home-system

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
mosquitto/config/: mosquitto.conf
src/hose-service/: .env.example  Cargo.toml  README.md  docker-compose.yml  rumqqt.toml
src/hose-service/src/: configuration.rs  lib.rs  main.rs  mongodb.rs  mqtt.rs  mqtt_handlers.rs  startup.rs
src/hose-service/src/conditions/: data.rs  mod.rs  mongodb.rs  mqtt.rs
src/hose-service/src/routes/: get_latest_condition.rs  get_latest_conditions.rs  mod.rs  publish_mqtt_mock.rs
src/hose-service/tests/: common.rs  mqtt.rs  server.rs
src/hose-service/tests/common/: mod.rs
src/weapi-service/: .env.example  README.md  docker-compose.yml  go.mod  go.sum  main.go  mongodb.go  test-weapi-service.http  weather.go  weatherapi.go
