[package]
name = "hose-service"
version = "0.1.0"
edition = "2024"

# [[bin]]
# path = "src/main.rs"
# name = "hose-service"

[lib]
name = "hose_service"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
log = "0.4.22"
env_logger = "0.11.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
anyhow = "1.0.86"
